# OpenCV

./: .gitignore  CMakeLists.txt  main.cpp
Resources/: Resources.h
